--- a/index.html
+++ b/index.html
@@ -7,46 +7,45 @@
     <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
 </head>
+
 <body>
     <div class="cal_area">
-        <h1>Simple Calculator!</h1>
+        <h1>A Simple Calculator!</h1>
         <table>
-            <div class="display">
-                <tr>
-                    <th colspan="5" id="display_x">0</th>
-                </tr>
-            </div>
-            <div class="keybord">
-                <tr>
-                    <td onclick="cal(7)">7</td>
-                    <td onclick="cal(8)">8</td>
-                    <td onclick="cal(9)">9</td>
-                    <td onclick="det()">DET</td>
-                    <td onclick="ac()">AC</td>
-                </tr>
-                <tr>
-                    <td onclick="cal(4)">4</td>
-                    <td onclick="cal(5)">5</td>
-                    <td onclick="cal(6)">6</td>
-                    <td onclick="cal('*')">X</td>
-                    <td onclick="cal('/')">/</td>
-                </tr>
-                <tr>
-                    <td onclick="cal(1)">1</td>
-                    <td onclick="cal(2)">2</td>
-                    <td onclick="cal(3)">3</td>
-                    <td onclick="cal('+')">+</td>
-                    <td onclick="cal('-')">-</td>
-                </tr>
-                <tr>
-                    <td onclick="cal(0)">0</td>
-                    <td onclick="cal('.')">.</td>
-                    <td onclick="cal('(')">(</td>
-                    <td onclick="cal(')')">)</td>
-                    <td onclick="equ()">=</td>
-                </tr>
-            </div>
+            <tr>
+                <th colspan="5" id="display">0</th>
+            </tr>
+            <tr>
+                <td onclick="cal(7)">7</td>
+                <td onclick="cal(8)">8</td>
+                <td onclick="cal(9)">9</td>
+                <td onclick="det()">DET</td>
+                <td onclick="ac()">AC</td>
+            </tr>
+            <tr>
+                <td onclick="cal(4)">4</td>
+                <td onclick="cal(5)">5</td>
+                <td onclick="cal(6)">6</td>
+                <td onclick="cal('*')">X</td>
+                <td onclick="cal('/')">/</td>
+            </tr>
+            <tr>
+                <td onclick="cal(1)">1</td>
+                <td onclick="cal(2)">2</td>
+                <td onclick="cal(3)">3</td>
+                <td onclick="cal('+')">+</td>
+                <td onclick="cal('-')">-</td>
+            </tr>
+            <tr>
+                <td onclick="cal(0)">0</td>
+                <td onclick="cal('.')">.</td>
+                <td onclick="cal('(')">(</td>
+                <td onclick="cal(')')">)</td>
+                <td onclick="equ()">=</td>
+            </tr> 
         </table>
+        <br>
+        <a class="footer" href="https://www.facebook.com/EdTech.engg">Rony Ahmmed EdTE-UFTB</a>
     </div>
     <script src="javascript.js"></script>
 </body>
